# auth-almighty

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test-on-merge.yml
src/: config.py  main.py  settings.py
src/domain/enums/: enums.py
src/domain/helpers/: response.py
src/domain/responses/: responses.py
src/strategies/: base_strategy.py  github_strategy.py  google_strategy.py
tests/: test_base_strategy.py  test_github_strategy.py
