[project]
name = "auth-almighty"
version = "0.1.0"
description = ""
authors = [
    {name = "LaProgrammer",email = "justinoghenekomeebedi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9.0"
dependencies = [
]

[tool.poetry]
packages = [{include = "auth_almighty", from = "src"}]


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
pre-commit = "^4.2.0"
mypy = "^1.17.0"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
