[project]
name = "auth-almighty"
version = "0.1.0"
description = ""
authors = [
    {name = "LaProgrammer",email = "justinoghenekomeebedi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9.0"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "auth_almighty", from = "src"}]


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
pre-commit = "^4.2.0"
mypy = "^1.17.0"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-mock = "^3.14.1"
coverage = "^7.9.2"
httpx = {extras = ["http2"], version = "^0.28.1"}
respx = "^0.22.0"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
